# FastAPI-RAG-System

./: .env  .env.example  Dockerfile  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 057b6842a5e7_create_table_users.py  1306d12fff0d_create_documents_table.py  201208ca48b0_create_document_chunks_table.py  303f54ae3e41_changed_users_table_column_name_username.py  36aa86e5b0c3_add_embedding_column.py  45da21c5a76c_add_conversations_and_messages.py  5ab97286c43c_create_ingestion_job_table.py  68612d717c9d_added_title_generated_bool_to_.py  829058d976c6_change_vector_dimensions.py  8fa423b81a2c_create_refresh_tokens_table.py  91be6fa71215_add_column_created_at_in_conversations.py  9df622bd1524_add_column_updated_at_in_conversations.py  b743926e34ff_add_column_created_at_in_messages.py
app/: celery_app.py  main.py
app/auth/: dependencies.py  jwt.py  router.py  security.py  service.py
app/chat/: events.py  router.py  service.py
app/conversations/: router.py  service.py
app/core/: config.py
app/db/: base.py  database.py
app/documents/: repository.py  router.py  schemas.py  service.py
app/embeddings/: base.py  local.py  service.py
app/ingestion/: parser_factory.py
app/jobs/: publisher.py  repository.py  service.py  subscriber.py
app/llm/: base.py  groq.py  prompts.py  service.py
app/models/: conversation.py  document.py  document_chunk.py  enums.py  injestion_job.py  message.py  refresh_token.py  user.py
app/repository/: chat_repository.py  chunk_repository.py  conversation_repository.py  message_repository.py  refresh_token_repository.py  user_repository.py
frontend/: package-lock.json  package.json
(+42 files in other folders)
